add_library(logic
        World.cpp
				Score.cpp
        entity/Player.cpp
				entity/Ghost.cpp
				entity/Character.cpp
        observer/Observer.cpp
				observer/Event.h
        utils/JSONParser.cpp
        utils/Utils.h
        entity/Entity.cpp
        utils/Stopwatch.cpp
        utils/CollisionHandler.cpp
        utils/Random.cpp
				utils/Vector.cpp
				utils/Camera.cpp
				utils/FileWriter.h
				maze/MazeNode.cpp
				maze/Maze.cpp
				maze/Wall.cpp
		State.cpp
		entity/Coin.h
		entity/Coin.cpp
		entity/Fruit.cpp
		PauseMenu.h
		entity/layout/Text.cpp
		entity/layout/Text.h
		../view/FontManager.h
		utils/TextConfig.h
		Leaderboard.cpp
)

