add_library(view
				Game.cpp
        view/EntityView.cpp
        view/WallView.cpp
        view/DrawableInterface.h
        view/SpriteDrawable.cpp
        view/ShapeDrawable.cpp
				EntityFactory.cpp
		graphics/TextureParser.cpp
		graphics/Visuals.cpp
		graphics/Renderer.cpp
		graphics/TextureManager.h
		state/StateView.h
		state/StateManager.h
		state/StateManager.cpp
		state/StateView.cpp
		view/TextDrawable.cpp
		view/TextDrawable.h
		controller/GameController.h
		controller/GameController.cpp
		audio/SoundPlayer.h
		Dispatcher.h
		Dispatcher.cpp
		audio/SoundPlayer.cpp
)
target_link_libraries(view PRIVATE logic sfml-graphics sfml-window sfml-system sfml-audio)
